<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Life App</string>
    <string name="title_section1">Student Senate</string>
    <string name="title_section2">Clubs</string>
    <string name="title_section3">Events</string>
    <string name="title_section4">Student Association</string>
    <string name="title_section5">My Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Sign Out</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Student Association Senate Home Page -->

    <!-- SA Page -->
    <string name="sa_officers_button">Officers</string>
    <string name="sa_about_button">About</string>
    <string name="sa_senate_button">Senate</string>
    <string name="sa_phone_textView"><a href="tel:l4232362723">(423)-236-2723</a></string>

    <!-- SN Page -->
    <string name="sn_minutes_button">Minutes</string>
    <string name="sn_senators_button">Current Senators</string>

    <string name="email1">test@test.com</string>
    <string name="email2">qmarcelle@gmail.com</string>

    <!-- Help Page -->
    <string name="report_label">Report</string>
    <string name="name_report">full name</string>
    <string name="report_email">email address</string>
    <string name="text_report">Here you can submit any issues you may be experiencing.
        You may also submit suggestions and improvements you may have.</string>
    <string name="button_report">Submit Now</string>

    <!-- User Profile -->

    <!-- My Feed -->

    <!-- Dashboard -->
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">User Profile</string>
    <string name="title_feature2">My Feed</string>
    <string name="title_feature4">Clubs</string>
    <string name="title_feature3">My Events</string>
    <string name="title_feature5">Student Association</string>
    <string name="title_feature6">Student Senate</string>

    <!-- Some used & unused... organizing what I needed -->
    <string name="hello">Choose one of the features below.</string>

    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>



    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>


</resources>
