<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/report_label"
        android:layout_gravity="center_horizontal"
        android:text="@string/report_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name_report"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name_report" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/report_email"
        android:layout_gravity="center_horizontal"
        android:hint="@string/report_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/text_report"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text_report"
        android:layout_weight="0.88" />

    <Button
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/button_report"
        android:id="@+id/button_report"
        android:layout_gravity="center_horizontal"
        android:onClick="reg_button"/>

</LinearLayout>