<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/s_a_icon"
            android:id="@+id/s_a_icon" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home_default"
            android:onClick="onClickHome" />
        <TextView style="@style/TitleBarText"
            android:text="@string/title_feature2"
            android:id="@+id/user_pro_title"/>

    </LinearLayout>

</LinearLayout>