<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_feature1"
                style="@style/HomeButton"
                android:onClick="onClickFeature"
                android:text="@string/title_feature1"
                android:drawableTop="@drawable/user_profile_icon"/>
            <Button android:id="@+id/home_btn_feature2"
                style="@style/HomeButton"
                android:onClick="onClickFeature"
                android:text="@string/title_feature2"
                android:drawableTop="@drawable/feed_icon"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_feature3"
                style="@style/HomeButton"
                android:onClick="onClickFeature"
                android:text="@string/title_feature3"
                android:drawableTop="@drawable/calendar_icons"/>
            <Button android:id="@+id/home_btn_feature4"
                style="@style/HomeButton"
                android:onClick="onClickFeature"
                android:text="@string/title_feature4"
                android:drawableTop="@drawable/clubs_icons"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_feature5"
                style="@style/HomeButton"
                android:onClick="onClickFeature"
                android:text="@string/title_feature5"
                android:drawableTop="@drawable/s_a_icon"/>
            <Button android:id="@+id/home_btn_feature6"
                style="@style/HomeButton"
                android:onClick="onClickFeature"
                android:text="@string/title_feature6"
                android:drawableTop="@drawable/sa_senate"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>